--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </header>
     <main>
-      <section class="max-width-wrapper">
+      <section class="max-width-wrapper border-top">
         <div class="card">
           <h2 class="indented-heading">
             Wealth comes from operations
