--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       <div class="max-width-wrapper">
         <div class="intro-chunk">
           <h1 class="title">Huckleberry</h1>
-
           <p>
             An avant-garde agency focused on connecting
             <strong>passion</strong> with <strong>logistics</strong>.
@@ -31,6 +30,7 @@
     <main>
       <section class="max-width-wrapper">
         <div class="card">
+          <div class="back">
           <h2 class="indented-heading">
             Wealth comes from operations
           </h2>
@@ -47,6 +47,8 @@
             ambitious businesses discover their true potential. If
             that resonates, let's chat. ☎
           </p>
+          <div class="container"></div>
+        </div>
         </div>
       </section>
     </main>
