--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
           </h2>
           <p>
             No modern business can thrive without developing a
-            specialization in operations. <em>Huckleberry</em> has
-            helped dozens of companies, from Fortune 50 monoliths to
+            specialization in operations. Huckleberry has helped
+            dozens of companies, from Fortune 50 monoliths to
             fast-growing Bay Area startups, achieve their goals and
             meet their KPIs by leveraging our extensive network of
             logistics experts.
           </p>
           <p>
-            <em>Huckleberry</em> was established in 2003 to help
-            ambitious businesses discover their true potential. If
-            that resonates, let's chat.
+            Huckleberry was established in 2003 to help ambitious
+            businesses discover their true potential. If that
+            resonates, let's chat!
           </p>
         </div>
       </section>
