[New]: Agency page v1 and structure.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <div class="max-width-wrapper">
         <div class="intro-chunk">
-          <h1 class="title">Huckleberry</h1>
+          <h1 class="title">Huckleberry Laurent</h1>
 
           <p>
             An avant-garde agency focused on connecting
